styles.css
body {
  margin: 0px auto;
  font-family: Georgia, serif;
}

#main {
  position: relative;
  width: 100%;
  height: 100%
}

.child {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  max-width: 800px;
  text-align: center;
  min-width: 30%;
  min-height: 30%;
}

.answer {
  min-width: 150px;
  text-align: center;
}

.selected {
  font-weight: bold;
}

.settings {
  margin-bottom: 25px;
}

.gamestate {
  min-height: 200px;
}

